--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Bot that will moderate and make your community secure by a simple way">
     <title>Balle Bot - Moderate your Discord community</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header class="header">
         <img class="header-img" src="LogoBallerini.svg" alt="Community Logo">
-        <nav header-menu>
-            <a class="menu-item">Ballerini's Community</a>
-            <a class="menu-item">Tutorial</a>
-            <a class="menu-item">Open Source</a>
-            <a class="menu-item">Comands</a>
+        <nav class="header-menu">
+            <a class="header-menu-item" href="https://discord.gg/wagxzStdcR">Ballerini's Community</a>
+            <a class="header-menu-item">Tutorial</a>
+            <a class="header-menu-item">Open Source</a>
+            <a class="header-menu-item">Comands</a>
         </nav>
     </header>
 
